language/move-compiler/tests/move_check/translated_ir_tests/move/commands/while_move_local.exp
error[E06002]: use of unassigned variable
  ┌─ tests/move_check/translated_ir_tests/move/commands/while_move_local.move:7:13
  │
7 │         y = move x;
  │             ^^^^^^
  │             │
  │             Invalid usage of previously moved variable 'x'.
  │             Suggestion: use 'copy x' to avoid the move.
  │             In a loop, this typically means it was moved in the first iteration, and is not available by the second iteration.

